--- a/home.html
+++ b/home.html
@@ -480,14 +480,13 @@
             <div id="smooth-content">
 <section class="hero-section hero-1 fix bg-cover" style="background-image: url('assets/img/home-1/hero/hero-bg.avif'); background-size: cover; background-position: center;">
   <div class="container">
+  <!-- 🔹 Background Video (desktop only) -->
+  <video class="hero-bg-video" autoplay muted loop playsinline poster="assets/img/home-1/hero/fallback.jpg">
+    <source src="assets/img/home-1/hero/Heroloop.mp4" type="video/mp4">
+    <!-- Fallback text if video can't be played -->
+    Your browser does not support the video tag.
+  </video>
     <div class="row align-items-center">
-      <!-- Hero Image Section -->
-      <div class="col-lg-4 col-md-6 mb-4 mb-md-0 d-flex justify-content-center justify-content-lg-start">
-        <div class="hero-image wow animated-image text-center w-100">
-          <img loading="lazy" src="assets/img/home-1/hero/hammer.avif" alt="overlay" class="overlay-img img-fluid" style="max-width: 100%; height: auto;">
-          <img loading="lazy" src="assets/img/home-1/hero/hammer (1light).png" alt="overlay" class="glow-loop overlay-img img-fluid" style="max-width: 100%; height: auto;">
-        </div>
-      </div>
 
       <!-- Hero Text Content -->
       <div class="col-lg-8 col-md-6 text-center text-lg-start">
