--- a/projects.html
+++ b/projects.html
@@ -955,6 +955,7 @@
 </section>
 
 
+
 <section class="gaming-hero-section">
   <div class="gaming-overlay d-flex flex-column justify-content-center align-items-center text-center position-relative">
     
@@ -967,10 +968,10 @@
 
     <!-- Left Rotated Image -->
     <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image hide-on-small">
-
+    <img src="assets/img/hammerlight.png" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
     <!-- Right Image -->
     <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image hide-on-small">
-
+    <img src="assets/img/home-1/testimonial/shapel.png" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
   </div>
 </section>
 
