--- a/company.html
+++ b/company.html
@@ -1041,9 +1041,11 @@
 
     <!-- Left Rotated Image -->
     <img src="assets/img/hammer.png" alt="Left Image" class="side-image left-image hide-on-small">
+    <img src="assets/img/hammerlight.png" alt="Left Image" class="glow-loop side-image left-image hide-on-small">
 
     <!-- Right Image -->
     <img src="assets/img/home-1/testimonial/shape.png" alt="Right Image" class="side-image right-image hide-on-small">
+    <img src="assets/img/home-1/testimonial/shapel.png" alt="Right Image" class="glow-loop side-image right-image hide-on-small">
 
   </div>
 </section>
