--- a/company.html
+++ b/company.html
@@ -562,9 +562,10 @@
 <!-- GT Operating principles Section two dektop Start -->
 <section class="gt-about-section hide-mobile fix section-padding py-3 position-relative overflow-hidden text-center">
     <!-- Main Heading -->
-    <h2 class="text">
-        Story
-    </h2>
+    <!-- Decorative Shape -->
+    <div class="right-shape position-absolute bottom-0 end-0 z-n1 d-none d-md-block">
+        <img src="assets/img/home-2/match/left-shape - TES.png" alt="img">
+    </div>
 
     <!-- Decorative Shape -->
     <div class="left-shape position-absolute bottom-0 start-0 z-n1 d-none d-md-block">
