--- a/services.html
+++ b/services.html
@@ -281,12 +281,49 @@
     </div>
 </header>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const header = document.getElementById("header-sticky");
+        const logo = header.querySelector(".logo");
+        const scrollThreshold = 100; // Adjust this value as needed
+
+        function handleScroll() {
+            if (window.scrollY > scrollThreshold) {
+                header.classList.add("scrolled");
+                logo.classList.remove("initial-large"); // Remove the large logo class, so it defaults to normal size
+            } else {
+                header.classList.remove("scrolled");
+                logo.classList.add("initial-large"); // Add it back when at the top to make it large
+            }
+        }
+
+        // Initial check in case the page is loaded already scrolled
+        handleScroll();
+
+        // Listen for scroll events
+        window.addEventListener("scroll", handleScroll);
+
+        // --- Mobile menu toggle (basic functionality) ---
+        const hamburger = document.querySelector(".header__hamburger .sidebar__toggle");
+        // Ensure you target the correct mobile menu UL.
+        // If #mobile-menu contains both desktop and mobile Uls,
+        // you might need a more specific selector, e.g.,
+        // const mobileMenu = document.querySelector("#mobile-menu ul.d-xl-none");
+        const mobileMenu = document.getElementById("mobile-menu").querySelector("ul.d-xl-none"); // Targeting the specific mobile UL
+
+        if (hamburger && mobileMenu) {
+            hamburger.addEventListener("click", function() {
+                mobileMenu.classList.toggle("mobile-menu-active");
+            });
+        }
+    });
+</script>
 
 <style>
 .responsive-hero {
   position: relative;
   min-height: 50vh;
-  background-image: url('assets/img/home-1/hero/TESSHero_Bg.jpg');
+  background-image: url('assets/img/home-1/hero/TESSHero_Bg.avif');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -736,7 +773,7 @@
 
       <!-- Slide 1 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard7.jpg');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard7.avif');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🛠️ Rigging & <span>Character setup</span></div>
           <div class="accordion-body-mob">
@@ -753,7 +790,7 @@
 
       <!-- Slide 2 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard3.jpg');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard3.avif');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">⚙️ Technical <span>integration</span></div>
           <div class="accordion-body-mob">
@@ -770,7 +807,7 @@
 
       <!-- Slide 3 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard5.jpg');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard5.avif');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎬 Cinematic & <span>Gameplay animation</span></div>
           <div class="accordion-body-mob">
@@ -824,7 +861,7 @@
     <!-- Card 1 -->
     <div class="accordion-card" data-index="0">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail1.jpg" alt="Rigging thumbnail">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail1.avif" loading="lazy" alt="Rigging thumbnail">
         <div class="toggle-icon">▼</div>
 
         <div class="accordion-title">🛠️ Rigging & <span>Character setup</span></div>
@@ -844,7 +881,7 @@
     <!-- Card 2 -->
     <div class="accordion-card" data-index="1">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail2.jpg" alt="Integration thumbnail">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail2.avif" loading="lazy" alt="Integration thumbnail">
         <div class="toggle-icon">▼</div>
 
         <div class="accordion-title">⚙️ Technical <span>integration</span></div>
@@ -864,7 +901,7 @@
     <!-- Card 3 -->
     <div class="accordion-card" data-index="2">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail3.jpg" alt="Animation thumbnail">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail3.avif" loading="lazy" alt="Animation thumbnail">
         <div class="toggle-icon">▼</div>
 
         <div class="accordion-title">🎬 Cinematic & <span>Gameplay animation</span></div>
@@ -921,7 +958,7 @@
 
       <!-- Slide 1 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard8.jpg');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard8.avif');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎯 Motion capture <span>cleanup & processing</span></div>
           <div class="accordion-body-mob">
@@ -936,7 +973,7 @@
 
       <!-- Slide 2 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard6.jpg');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard6.avif');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎯 Retargeting & <span>motion editing</span></div>
           <div class="accordion-body-mob">
@@ -951,7 +988,7 @@
 
       <!-- Slide 3 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard2.jpg');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard2.avif');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎯 Facial motion <span>capture solutions</span></div>
           <div class="accordion-body-mob">
@@ -967,7 +1004,7 @@
 
       <!-- Slide 4 -->
       <div class="swiper-slide">
-        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard4.jpg');">
+        <div class="accordion-card-mob" style="background-image: url('assets/img/home-3/services/TestCard4.avif');">
           <div class="overlay"></div>
           <div class="accordion-title-mob">🎯 Cinematic & <span>gameplay animation</span></div>
           <div class="accordion-body-mob">
@@ -1022,7 +1059,7 @@
     <!-- Card 1 -->
     <div class="accordion-card" data-index="0">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail7.jpg" alt="Motion capture thumbnail">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail7.avif" loading="lazy" alt="Motion capture thumbnail">
         <div class="toggle-icon">▼</div>
         <div class="accordion-title">🎯 Motion capture <span>cleanup & processing</span></div>
         <div class="accordion-body">
@@ -1038,7 +1075,7 @@
     <!-- Card 2 -->
     <div class="accordion-card" data-index="1">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail4.jpg" alt="Retargeting">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail4.avif" loading="lazy" alt="Retargeting">
         <div class="toggle-icon">▼</div>
         <div class="accordion-title">🎯 Retargeting & <span>motion editing</span></div>
         <div class="accordion-body">
@@ -1054,7 +1091,7 @@
     <!-- Card 3 -->
     <div class="accordion-card" data-index="2">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail5.jpg" alt="Facial motion capture">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail5.avif" loading="lazy" alt="Facial motion capture">
         <div class="toggle-icon">▼</div>
         <div class="accordion-title">🎯 Facial motion <span>capture solutions</span></div>
         <div class="accordion-body">
@@ -1071,7 +1108,7 @@
     <!-- Card 4 -->
     <div class="accordion-card" data-index="3">
       <button class="accordion-btn" onclick="toggleCard(this)">
-        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail6.jpg" alt="Gameplay animation">
+        <img class="thumbnail" src="assets/img/home-3/services/Mob_Thumbnail6.avif" loading="lazy" alt="Gameplay animation">
         <div class="toggle-icon">▼</div>
         <div class="accordion-title">🎯 Cinematic & <span>gameplay animation</span></div>
         <div class="accordion-body">
@@ -1507,7 +1544,6 @@
 
 
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.10.2/lottie.min.js"></script>
 
 
         <!-- reCAPTCHA and EmailJS scripts -->
