--- a/home.html
+++ b/home.html
@@ -12,12 +12,12 @@
 
         <!-- Open Graph Meta Tags -->
         <meta property="og:locale" content="en_US">
-        <meta property="og:title" content="The Entity Studios">
+        <meta property="og:title" content="The Entity Studios,The Entity Studio, Entity Studio, Entity Studios">
         <meta property="og:description" content="AAA Veterans delivering elite game animation and production pipelines. Also known as The-Entity Ltd, The Entity OÜ, and Entity Studios Private Limited.">
         <meta property="og:image" content="https://the-entity.studio/assets/img/meta/og-image.avif">
         <meta property="og:url" content="https://the-entity.studio/">
         <meta property="og:type" content="website">
-        <meta property="og:site_name" content="The Entity Studios">
+        <meta property="og:site_name" content="The Entity Studios,The Entity Studios, Entity Studio, Entity Studios">
 
         <!-- Twitter Card Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
